--- a/.github/workflows/jogod-ci.yml
+++ b/.github/workflows/jogod-ci.yml
@@ -3,8 +3,8 @@ on:
   push:
     branches:
       - '**'
-    paths:
-      - 'JoGod/**'
+#    paths:
+#      - 'JoGod/**'
 
 jobs:
   push:
@@ -17,7 +17,7 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r ./JoGod/requirements.txt
       - name: Run Makefile test
         run: make test
       - name: Run formatter
