--- a/.github/workflows/jogod-ci.yml
+++ b/.github/workflows/jogod-ci.yml
@@ -9,6 +9,9 @@ on:
 jobs:
   push:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./JoGod
     steps:
       - uses: actions/checkout@v1
       - uses: actions/setup-python@v1
@@ -17,7 +20,7 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r ./JoGod/requirements.txt
+          pip install -r requirements.txt
       - name: Run Makefile test
         run: make test
       - name: Run formatter
