--- a/.gitignore
+++ b/.gitignore
@@ -113,4 +113,8 @@ fabric.properties
 # https://plugins.jetbrains.com/plugin/12206-codestream
 .idea/codestream.xml
 
+.DS_Store
+
+
+
 # End of https://www.toptal.com/developers/gitignore/api/jetbrains
