--- a/.gitignore
+++ b/.gitignore
@@ -11,9 +11,11 @@ mongo-volume/*
 data/mongo_data
 data/data_resto
 data/data_neo
+data/mongo_data_backup
 data/data_neo_v1
 neo4j/data/
 neo4j/data_resto
+
 
 
 # User-specific stuff
