--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,8 +51,8 @@ services:
     environment:
       MONGO_INITDB_DATABASE: epicurien
       MONGODB_DATA_DIR: /data/db
-    volumes:
-      - ./data/data_mongo_route_with_types/db:/data/db
+#    volumes:
+#      - ./data/mongo_test/db:/data/db
     ports:
       - "27017:27017"
 
@@ -63,7 +63,7 @@ services:
     hostname: neo4j_epicurien
     volumes:
       - ./neo4j/plugins:/plugins
-      - ./data/data_neo:/data
+#      - ./data/neo_bool:/data
     environment:
       NEO4J_AUTH: none
       NEO4J_dbms_logs_debug_level: DEBUG
