--- a/JoGod/requirements.txt
+++ b/JoGod/requirements.txt
@@ -1,7 +1,9 @@
 black==20.8b1
 flask==1.1.2
+jsonschema==4.2.1
 markdown==3.3.6
 nose==1.3.7
 py==1.10.0
 pylint==2.6.0
 pymongo==3.12.1
+py2neo==2021.2.3
