--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,6 @@ services:
   fabob:
     container_name:
       fabob
-    restart: always
     build: ./FaBob/
     ports:
       - "5001:5001"
@@ -52,7 +51,7 @@ services:
       MONGO_INITDB_DATABASE: epicurien
       MONGODB_DATA_DIR: /data/db
     volumes:
-      - ./mongo-volume:/data/db
+      - ./data/mongo/db:/data/db
     ports:
       - "27017:27017"
 
@@ -63,7 +62,7 @@ services:
     hostname: neo4j_epicurien
     volumes:
       - ./neo4j/plugins:/plugins
-      - ./neo4j/data:/data
+      - ./data/neo:/data
     environment:
       NEO4J_AUTH: none
       NEO4J_dbms_logs_debug_level: DEBUG
